--- a/a1/client/src/components/Login.css
+++ b/a1/client/src/components/Login.css
@@ -12,10 +12,78 @@
 
 .main-content {
     display: inline-block;
-    width: 30%;
+    width: 40%;
     position: absolute;
-    height: 100%;
-    /* top: 0; */
-    padding:  10%;
+    padding:  5%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-/* .Im */
+
+.fields-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    /* height: 100%; */
+}
+.login-text {
+    padding-bottom: 10%;
+}
+
+.text-field {
+    width: 80%;
+}
+
+#login-button {
+    width: 80%;
+    /* height: 20%; */
+    text-transform: unset;
+    margin-top: 30%;
+    background-color: #2553af;
+    border-radius: 10px;
+}
+
+.signup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.or-text-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 60%;
+    margin-top: 3%;
+    color: gray;
+}
+
+.or-text-hr {
+    width: 40%;
+    color: gray;
+    height: hairline;
+}
+
+.signup-text-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 2%;
+    color: gray;
+}
+
+#signup-button {
+    cursor: pointer;
+    font-weight: bold;
+    text-transform: unset;
+    color: #2553af;
+    padding-left: 2%;
+}
+
+
