--- a/a1/client/src/components/Login.css
+++ b/a1/client/src/components/Login.css
@@ -1,16 +1,16 @@
-.container {
+#login-container {
     flex-direction: row;
     width: 100vw;
     height: 100vh;
 }
 
-.image {
+#image {
     display: inline-block;
     width: 50%;
     height: 100%;
 }
 
-.main-content {
+#main-content {
     display: inline-block;
     width: 40%;
     position: absolute;
@@ -20,32 +20,58 @@
     justify-content: center;
 }
 
-.fields-container {
+#main-content-mobile {
+    display: flex;
+    width: 90vw;
+    height: 90vh;
+    position: absolute;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#fields-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
-    /* height: 100%; */
 }
-.login-text {
+
+#login-text {
+    /* width: 100vw; */
     padding-bottom: 10%;
 }
 
+#login-text-mobile {
+    /* width: 100vw; */
+    /* width: 90%; */
+    text-align: center;
+    padding-top: 10%;
+}
+
 .text-field {
-    width: 80%;
+    width: 100%;
 }
 
 #login-button {
-    width: 80%;
-    /* height: 20%; */
+    width: 100%;
     text-transform: unset;
     margin-top: 30%;
     background-color: #2553af;
     border-radius: 10px;
 }
 
-.signup-container {
+#login-button-mobile {
+    width: 100%;
+    text-transform: unset;
+    margin-top: 30%;
+    background-color: #2553af;
+}
+
+#signup-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,7 +79,7 @@
     width: 100%;
 }
 
-.or-text-row {
+#or-text-row {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -68,17 +94,18 @@
     height: hairline;
 }
 
-.signup-text-row {
+#signup-text-row {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-top: 2%;
+    margin-top: 3%;
     color: gray;
 }
 
 #signup-button {
+    /* height: 20%; */
     cursor: pointer;
     font-weight: bold;
     text-transform: unset;
@@ -86,4 +113,10 @@
     padding-left: 2%;
 }
 
-
+#forgot-password-button {
+    cursor: pointer;
+    text-transform: unset;
+    color: #2553af;
+    padding-left: 2%;
+    align-self: flex-start;
+}
