add a2 sql files

--- a/a1/client/src/components/Home.css
+++ b/a1/client/src/components/Home.css
@@ -40,7 +40,7 @@
 #learn-more-text {
     margin-top: 2%;
     margin-bottom: 2%;
-    color: darkgreen;
+    color: #31646e;
     cursor: pointer;
 }
 
